# hybrid-memory-talk

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
examples/: demo.py  demo_notebook.ipynb  utils.py
examples/.ipynb_checkpoints/: demo-checkpoint.py
examples/policies/: policy_cooldown.md  policy_password.md  policy_security.md  policy_steps.md  policy_verification.md
src/: agent.py  config.py
src/memory/: episodic_store.py  hybrid_retriever.py  semantic_store.py
src/tools/: account_tools.py
src/tracing/: tracer.py
tests/: test_account_tools.py  test_agent.py  test_config.py  test_memory_and_retriever.py  test_smoke_hybrid.py  test_tracer.py
